--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
 
         <ul class="site-nav list">
           <li class="item"><a href="./index.html" class="nav-link">Студия</a></li>
-          <li class="item"><a href="" class="nav-link current">Портфолио</a></li>
+          <li class="item item-strip"><a href="" class="nav-link current current-portfolio">Портфолио</a></li>
           <li class="item"><a href="./contact.html" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
@@ -36,7 +36,7 @@
           <div class="icon-envelope">
             <a href="mailto:info@devstudio.com" class="contact-link">
               <svg width="16" height="12" class="svg-envelope">
-                <use href="./images/icons.svg#icon-envelope"></use>
+                <use href="./images/phone-env.svg#icon-envelope"></use>
               </svg>info@devstudio.com</a>
           </div>
         </li>
@@ -44,7 +44,7 @@
           <div class="icon-smartphone">
             <a href="tel:+380961111111" class="contact-link">
               <svg width="10" height="16" class="svg-smartphone">
-                <use href="./images/icons.svg#icon-smartphone"></use>
+                <use href="./images/phone-env.svg#icon-smartphone"></use>
               </svg>+38 096 111 11 11</a>
           </div>
         </li>
@@ -69,7 +69,11 @@
         <ul class="list wrap-list">
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project1.jpg" alt="Технокряк" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project1.jpg" alt="Технокряк" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Технокряк</h2>
                 <p class="project-text">Веб-сайт</p>
@@ -78,7 +82,12 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project2.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project2.jpg" alt="Постер New Orlean vs Golden Star"
+                  width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Постер New Orlean vs Golden Star</h2>
                 <p class="project-text">Дизайн</p>
@@ -87,7 +96,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project3.jpg" alt="Ресторан Seafood" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project3.jpg" alt="Ресторан Seafood" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Ресторан Seafood</h2>
                 <p class="project-text">Приложение</p>
@@ -96,7 +109,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project4.jpg" alt="Проект Prime" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project4.jpg" alt="Проект Prime" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Проект Prime</h2>
                 <p class="project-text">Маркетинг</p>
@@ -105,7 +122,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project5.jpg" alt="Проект Boxes" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project5.jpg" alt="Проект Boxes" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Проект Boxes</h2>
                 <p class="project-text">Приложение</p>
@@ -114,7 +135,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project6.jpg" alt="Inspiration has no Borders" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project6.jpg" alt="Inspiration has no Borders" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Inspiration has no Borders</h2>
                 <p class="project-text">Веб-сайт</p>
@@ -123,7 +148,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project7.jpg" alt="Издание Limited Edition" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project7.jpg" alt="Издание Limited Edition" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Издание Limited Edition</h2>
                 <p class="project-text">Дизайн</p>
@@ -132,7 +161,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project8.jpg" alt="Проект LAB" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project8.jpg" alt="Проект LAB" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Проект LAB</h2>
                 <p class="project-text">Маркетинг</p>
@@ -141,7 +174,11 @@
           </li>
           <li class="wrap-element">
             <a href="" class="link-wrap-element">
-              <img class="footer-img" src="./images/project9.jpg" alt="Growing Business" width="370" />
+              <div class="hidden-box">
+                <img class="wrap-img" src="./images/jpg/project9.jpg" alt="Growing Business" width="370" />
+                <p class="overlay-text">Ресурс предлагает комплексные предложения с разным уровнем функционала и
+                  сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
+              </div>
               <div class="projects-description">
                 <h2 class="project-tittle">Growing Business</h2>
                 <p class="project-text">Приложение</p>
